--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 </head>
 <body>
 
- <main class="contenedor">
+ <main class="contenedor centrar">
   <div class="contenido">
       <div class="exercise seccion" id ="paso-1">
         <div class="user">
           <div class="user-data">
             <img src="images/image-jeremy.png" alt="user">
             <div class="user-info">
-              <p>Report for</p>
-              <h3>Jeremy <span>Robson</span></h3>
+              <div><p>Report for</p></div>
+              <div class="name">
+                <h1>Jeremy <span class="span">Robson</span></h1>
+              </div>
             </div>
          </div> <!--end of user-data-->
         <div class="time">
@@ -28,14 +30,17 @@
           <button type="button" data-paso="3">Monthly</button>
         </div> <!--end of time-->
          </div>
-      </div>   <!--Aqui deben ir las tarjetas-->
+         <!--Aqui deben ir las tarjetas-->
+      </div>   
       <div class="exercise-weekly seccion" id ="paso-2">
         <div class="user">
           <div class="user-data">
             <img src="images/image-jeremy.png" alt="user">
             <div class="user-info">
-              <p>Report for</p>
-              <h3>Jeremy <span>Robson</span></h3>
+              <div><p>Report for</p></div>
+              <div class="name">
+                <h1>Jeremy <span class="span">Robson</span></h1>
+              </div>
             </div>
          </div> <!--end of user-data-->
         <div class="time">
@@ -44,29 +49,33 @@
           <button type="button" data-paso="3">Monthly</button>
         </div> <!--end of time-->
          </div>
+         <!--Aqui deben ir las tarjetas-->
       </div>
       <div class="exercise-monthly seccion" id ="paso-3">
-         <div class="user">
-     <div class="user-data">
-       <img src="images/image-jeremy.png" alt="user">
-       <div class="user-info">
-         <p>Report for</p>
-         <h3>Jeremy <span>Robson</span></h3>
-       </div>
-    </div> <!--end of user-data-->
-   <div class="time">
-     <button type="button" data-paso = "1">Daily</button>
-     <button type="button" data-paso="2">Weekly</button>
-     <button type="button" data-paso="3" class="activo">Monthly</button>
-   </div> <!--end of time-->
-    </div>
+        <div class="user">
+          <div class="user-data">
+            <img src="images/image-jeremy.png" alt="user">
+            <div class="user-info">
+              <div><p>Report for</p></div>
+              <div class="name">
+                <h1>Jeremy <span class="span">Robson</span></h1>
+              </div>
+            </div>
+         </div> <!--end of user-data-->
+        <div class="time">
+          <button type="button" data-paso = "1">Daily</button>
+          <button type="button" data-paso="2">Weekly</button>
+          <button type="button" data-paso="3" class="activo">Monthly</button>
+        </div> <!--end of time-->
+         </div>
+         <!--Aqui deben ir las tarjetas-->
       </div> 
    </div>
+   <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/JJM3RLIN">M3RLIN</a>.
+  </div>
  </main>
- <div class="attribution">
-  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-  Coded by <a href="#">M3RLIN</a>.
-</div>
   <script src="main.js"></script>
 </body>
 </html>
